--- a/src/styles/mission.css
+++ b/src/styles/mission.css
@@ -81,7 +81,7 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: Georgia, serif;
+  font-family: 'Raleway', sans-serif;
   line-height: 1;
   font-style: italic;
   font-weight: 400;
